# fastoredis

./: .gitmodules  CMakeLists.txt  COPYRIGHT  README.md  changelog.txt  whats-new.txt
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  basictypes.h  boost_extension.h  boost_extension.hpp  common_config.h  convert2string.cpp  convert2string.h  file_system.cpp  file_system.h  hash_tables.h  icu_utf.cpp  icu_utf.h  intrusive_ptr.h  lexical_cast.cpp  lexical_cast.h  log_levels.h  log_levels.hpp  logger.cpp  logger.h  macros.cpp  macros.h  memory_string.cpp  memory_string.h  mpl.h  mpl.hpp  net.cpp  net.h  runtime_bitset.cpp  runtime_bitset.h  safe_sprintf.cpp  safe_sprintf.h  smart_ptr.h  smart_ptr.hpp  sprintf.cpp  sprintf.h  string16.cpp  string16.h  string_compress.cpp  string_compress.h  string_piece.cpp  (+20 more)
src/common/database/: common_helper.cpp  common_helper.h  connection_info.cpp  connection_info.h  help.txt  mysql_helper.cpp  mysql_helper.h  oracle_helper.cpp  oracle_helper.h  postgresql_helper.cpp  postgresql_helper.h  sqlite_helper.cpp  sqlite_helper.h
src/common/events/: static_events_bus.h  static_events_bus.hpp
src/common/file_parsers/: parser_ini.cpp  parser_ini.h
src/common/multi_threading/: boost_thread_pool_impl.h  boost_thread_pool_impl.hpp  common_headers.h  common_headers.hpp  lockers.cpp  lockers.h  pthread_thread_pool_impl.hpp  pthread_wrapper.hpp  std_thread_pool_impl.hpp  thread_adapter.hpp  thread_pool.h  thread_pool.hpp  thread_safe_containers.h  thread_safe_containers.hpp  types.h
src/common/net/: net.cpp  net.h  socket_tcp.cpp  socket_tcp.h
src/common/patterns/: command_pattern.h  command_pattern.hpp  crtp_pattern.h  crtp_pattern.hpp  factory_method.h  factory_method.hpp  factory_pattern.h  factory_pattern.hpp  observer_pattern.h  observer_pattern.hpp  singleton_pattern.h  singleton_pattern.hpp
src/common/qt/: convert_string.cpp  convert_string.h  converter_patterns.cpp  converter_patterns.h  utils_qt.cpp  utils_qt.h
src/common/qt_helper/: converter_patterns.cpp  converter_patterns.h  utils_qt.cpp  utils_qt.h
src/common/settings/: settings.h  settings.hpp
src/core/: CommandLogger.cpp  CommandLogger.h  ConnectionSettings.cpp  ConnectionSettings.h  ConnectionTypes.cpp  ConnectionTypes.h  HostAndPort.cpp  HostAndPort.h  IDataBase.cpp  IDataBase.h  IDriver.cpp  IDriver.h  IServer.cpp  IServer.h  Infos.cpp  Infos.h  Logger.cpp  Logger.h  RedisClient.cpp  RedisClient.h  RedisConfig.cpp  RedisDriver.cpp  RedisDriver.h  RedisServer.cpp  RedisServer.h  ServersManager.cpp  ServersManager.h  SettingsManager.cpp  SettingsManager.h  base64_edcoder.cpp  base64_edcoder.h  command_logger.cpp  command_logger.h  compress_edcoder.cpp  compress_edcoder.h  connection_settings.cpp  connection_settings.h  connection_types.cpp  connection_types.h  core_fwd.cpp  (+32 more)
src/core/events/: ErrorInfo.hpp  Events.hpp  EventsInfo.hpp  Infos.cpp  events.h  events.hpp  events_info.cpp  events_info.h  events_info.hpp  infos.cpp  infos.h
src/core/memcached/: memcached_config.cpp  memcached_config.h  memcached_driver.cpp  memcached_driver.h  memcached_infos.cpp  memcached_infos.h  memcached_server.cpp  memcached_server.h  memcached_settings.cpp  memcached_settings.h
src/core/redis/: RedisConfig.cpp  RedisConfig.h  RedisDataBase.cpp  RedisDataBase.h  RedisDriver.cpp  RedisDriver.h  RedisServer.cpp  RedisServer.h  redis_cluster.cpp  redis_cluster.h  redis_config.cpp  redis_config.h  redis_driver.cpp  redis_driver.h  redis_infos.cpp  redis_infos.h  redis_server.cpp  redis_server.h  redis_settings.cpp  redis_settings.h
src/core/ssdb/: ssdb_config.cpp  ssdb_config.h  ssdb_driver.cpp  ssdb_driver.h  ssdb_infos.cpp  ssdb_infos.h  ssdb_server.cpp  ssdb_server.h  ssdb_settings.cpp  ssdb_settings.h
src/global/: global.cpp  global.h  types.cpp  types.h
src/gui/: AboutDialog.cpp  AboutDialog.h  AppStyle.cpp  AppStyle.h  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionsDialog.cpp  ConnectionsDialog.h  FastoEditor.cpp  FastoEditor.h  FastoTableModel.cpp  FastoTableModel.h  FastoTableView.cpp  FastoTableView.h  FastoTreeItem.cpp  FastoTreeItem.h  FastoTreeModel.cpp  FastoTreeModel.h  FastoTreeView.cpp  FastoTreeView.h  GlassWidget.cpp  GlassWidget.h  GuiFactory.cpp  GuiFactory.h  IconLabel.cpp  IconLabel.h  LogWidget.cpp  LogWidget.h  MainTabBar.cpp  MainTabBar.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  OutputWidget.cpp  OutputWidget.h  PreferencesDialog.cpp  PreferencesDialog.h  PropertyTableModel.cpp  PropertyTableModel.h  (+42 more)
src/gui/base/: TableItem.cpp  TableModel.cpp  TableModel.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  graph_widget.cpp  graph_widget.h  table_item.cpp  table_item.h  table_model.cpp  table_model.h  tree_item.cpp  tree_item.h  tree_model.cpp  tree_model.h
src/gui/dialogs/: AboutDialog.cpp  AboutDialog.h  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionsDialog.cpp  ConnectionsDialog.h  InfoServerDialog.cpp  InfoServerDialog.h  PreferencesDialog.cpp  PreferencesDialog.h  PropertyServerDialog.cpp  PropertyServerDialog.h  about_dialog.cpp  about_dialog.h  base_console_dialog.cpp  base_console_dialog.h  change_password_server_dialog.cpp  change_password_server_dialog.h  cluster_dialog.cpp  cluster_dialog.h  connection_diagnostic_dialog.cpp  connection_diagnostic_dialog.h  connection_dialog.cpp  (+28 more)
src/resources/: .gitignore  gui.qrc.in  gui.qrc.in~
src/server_config_daemon/: CMakeLists.txt
src/shell/: RedisApi.cpp  RedisApi.h  RedisLexer.cpp  RedisLexer.h  RedisShell.cpp  RedisShell.h  ShellWidget.cpp  ShellWidget.h  lua_shell.cpp  lua_shell.h  memcached_lexer.cpp  memcached_shell.cpp  memcached_shell.h  python_shell.cpp  python_shell.h  redis_lexer.cpp  redis_lexer.h  redis_shell.cpp  redis_shell.h  redis_shell_widget.cpp  redis_shell_widget.h  shell_widget.cpp  shell_widget.h  ssdb_lexer.cpp  ssdb_shell.cpp  ssdb_shell.h
src/translations/: FastoRedis_en.ts  FastoRedis_ru.ts  Translations.cpp  Translations.h  fastoredis_fr.ts  fastoredis_ru.ts  global.cpp  global.h  translations.cpp  translations.h
(+78 files in other folders)
